Spark/Spark-kubernetes/kubernetes/spark-worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spark-worker
spec:
  replicas: 2
  selector:
    matchLabels:
      component: spark-worker
  template:
    metadata:
      labels:
        component: spark-worker
    spec:
      containers:
        - name: spark-worker
          image: spark-python:3.5.6
          command: ["/opt/spark/bin/spark-class"]
          args:
            - org.apache.spark.deploy.worker.Worker
            - spark://spark-master-svc:7077
          ports:
            - containerPort: 8081  # Worker UI
          resources:
            requests:
              cpu: 100m
