Spark/Spark-kubernetes/kubernetes/spark-master-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spark-master-svc
spec:
  selector:
    component: spark-master
  ports:
    - name: webui
      port: 8080
      targetPort: 8080
    - name: spark
      port: 7077
      targetPort: 7077
  type: ClusterIP
