Spark/Spark-kubernetes/kubernetes/minikube-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spark-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: spark.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: spark-master
                port:
                  number: 8080
